Impressum/Plugin/Faction major modifications
Few changes in css, mostly for Faction organisation for articles (left/right divs).
Moved images in a /img folder to make things clean
Renew few slides to better ones :)
fixed impressum block class misspell so now it works and re-arenged it

--- a/claiming.html
+++ b/claiming.html
@@ -10,7 +10,7 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="design.css">
-        <link rel="shortcut icon" href="ArdasLegendsLogo.ico" type="image/x-icon"> 
+        <link rel="shortcut icon" href="img/ArdasLegendsLogo.ico" type="image/x-icon"> 
     </head>
     <body>
         <header>
@@ -43,10 +43,10 @@ and open the template in the editor.
                             <a href="factions.html" class="Navi">Factions</a>
                         </button>
                         <div class="dropcontent">
-			    <a href="factions.html#avari">Avari</a>
+			                <a href="factions.html#avari">Avari</a>
                             <a href="factions.html#bangad">Bangad Minhiriath</a>
                             <a href="factions.html#beornings">Beornings</a>
-			    <a href="factions.html#bree">Bree</a>
+			                <a href="factions.html#bree">Bree</a>
                             <a href="factions.html#dale">Dale</a>
                             <a href="factions.html#dol_guldur">Dol Guldur</a>
                             <a href="factions.html#dorwinion">Dorwinion</a>
@@ -102,14 +102,14 @@ and open the template in the editor.
         <div class="block"> <!-- Claiming File & Claiming Map-->
             <div class="inline">
                 <h4 class="headlinearticles">Claiming File</h4>
-		    <a href="BuildList.xlsx" download>
+		    <a href="img/BuildList.xlsx" download>
 			<button class="downloadbutton"> Download Build List </a>
 		    </a>
                 <!-- here i plan a download button for the claiming file -->
             </div>
             <div class="inline">
                 <h4 class="headlinearticles">Claiming Map</h4>
-                <img src="Claimingmap.png" alt="Ardas Legends Claiming Map" style="width: 85%;height:85%">
+                <img src="img/Claimingmap.png" alt="Ardas Legends Claiming Map" style="width: 85%;height:85%">
             </div>
         </div>
     </main>
