--- a/factions.html
+++ b/factions.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="design.css">
-        <link rel="shortcut icon" href="ArdasLegendsLogo.ico" type="image/x-icon"> 
+        <link rel="shortcut icon" href="img/ArdasLegendsLogo.ico" type="image/x-icon"> 
     </head>
     <body>
          <header>
@@ -37,10 +37,10 @@
                             <a href="factions.html" class="Navi">Factions</a>
                         </button>
                         <div class="dropcontent">
-			    <a href="factions.html#avari">Avari</a>
+                <a href="factions.html#avari">Avari</a>
                             <a href="factions.html#bangad">Bangad Minhiriath</a>
                             <a href="factions.html#beornings">Beornings</a>
-			    <a href="factions.html#bree">Bree</a>
+                <a href="factions.html#bree">Bree</a>
                             <a href="factions.html#dale">Dale</a>
                             <a href="factions.html#dol_guldur">Dol Guldur</a>
                             <a href="factions.html#dorwinion">Dorwinion</a>
@@ -97,10 +97,10 @@
     </h1>
     <main>
     <div id="Sidenav" class="sidenav">
-    	<a href="factions.html#avari">Avari</a><br>
+        <a href="factions.html#avari">Avari</a><br>
         <a href="factions.html#bangad">Bangad Minhiriath</a><br>
         <a href="factions.html#beornings">Beornings</a><br>
-	    <a href="factions.html#bree">Bree</a><br>
+        <a href="factions.html#bree">Bree</a><br>
         <a href="factions.html#dale">Dale</a><br>
         <a href="factions.html#dol_guldur">Dol Guldur</a><br>
         <a href="factions.html#dorwinion">Dorwinion</a><br>
@@ -148,32 +148,29 @@
             <br>
         </p>
         <article id="bangad">
-            <h4 class="headlinearticles"> Bangad Minhiriath </h4>
-            <div class="artcl-container">
-                <div class="artcl-left">
-                    <p>
-                    "Bangad-Minhiriath are the true traders of Middle-Earth.<br>
-                    Translating to "Traders Between the Seas", the merchants live as a neutral faction and travel out from their capital of Esgaroth<br>
-                    and explore the lands trading with all races.<br>
-                    The city of Sammar Erui is also under the watch of Merchant-King Glupe.<br>
-                    If you're looking to make some money and a name for yourself join Bangad-Minhiriath today!" - glupe1, Founder and Faction Leader of Bangad Minhiriath<br>
-                </p> 
-                </div>
-                <div class="artcl-right">
-                    <p style="font-weight: bold;">Bangad-Minhiriath</p>
+          <div>
+            <h4 class="headlinearticles" style="margin: 40px;"> Bangad-Minhiriath</h4>
+            <div class="inline" style="width: 480px; margin-left: 0;">
+                <p style="font-size: 22px;">"Bangad-Minhiriath are the true traders of Middle-Earth.
+                    Translating to "Traders Between the Seas", the merchants live as a neutral faction and travel out from their capital of Esgaroth and explore the lands trading with all races.
+                    The city of Sammar Erui is also under the watch of Merchant-King Glupe.
+                    If you're looking to make some money and a name for yourself join Bangad-Minhiriath today!" - glupe1, Founder and Faction Leader of Bangad Minhiriath</p>
+            </div>
+            <div class="inline" style="width: 400px; margin: 0; background-color: rgba(255, 255, 255, 0.3);">
+                <p style="font-weight: bold;">Bangad-Minhiriath</p>
                     <div class="infos">
-                        <img src="img/slide1.png" style="height: 180px; width: 100%;">
+                        <img src="img/slide1.png" class="cover" style="height: 259px; width: 400px;">
                         <p style="margin-top: 5px;">Informations</p> 
                     </div>
                     <div>
                         <p style="font-style: italic;">King : Glupe (glupe1)</p>  
                     </div>
                     <div>
-                        <img style="width: 40px; image-rendering: pixelated;" src="https://vignette.wikia.nocookie.net/lotrminecraftmod/images/d/da/Bree-land_Banner.png/revision/latest?cb=20200612225741&format=original">
+                        <img style="width: 40px; image-rendering: pixelated;" src="https://vignette.wikia.nocookie.net/lotrminecraftmod/images/e/e3/Esgaroth_Banner.png/revision/latest/scale-to-width-down/100?cb=20170501171017&format=original">
                     </div>
-                    <p>...</p>    
-                </div>
-            </div> 
+                    <p>...</p>
+            </div>
+          </div>
         </article>
         <p class="between">
             <br>
@@ -347,28 +344,67 @@
             <br>
         </p>
         <article id="lothlorien">
-            <h4 class="headlinearticles"> Lothlórien </h4>
-            <p>
-                "Lothlórien is an elven faction, with established alliances with Rivendell and Rohan.<br>
-                We are a faction based around fine building, pvp, and trade. The faction is ruled by the sexy bastard Kai8027.<br>
+          <div>
+            <h4 class="headlinearticles" style="margin: 40px;">Lothlórien</h4>
+            <div class="inline" style="width: 480px; margin-left: 0;">
+                <p style="font-size: 22px;">"Lothlórien is an elven faction, with established alliances with Rivendell and Rohan.<br>
+                We are a faction based around fine building, pvp, and trade. The faction is ruled by the bastard Menelvagor.<br>
                 Cerin Silmë, the main village, is a network of elegant and well protected treehouses, as well as a grand smithy, docks, and farm.<br>
-                If you enjoy smoking weed, drinking booze, and getting rich, this is the perfect faction." - Kai8027, Faction Leader of Lothlórien<br>
+                If you enjoy smoking weed, drinking booze, and getting rich, this is the perfect faction." - Menelvagor (Kai8027), Faction Leader of Lothlórien<br>
             </p>
+            </div>
+            <div class="inline" style="width: 400px; margin: 0; background-color: rgba(255, 255, 255, 0.3);">
+                <p style="font-weight: bold;">Lothlórien</p>
+                    <div class="infos">
+                        <img src="img/slide1.png" class="cover" style="height: 259px; width: 400px;">
+                        <p style="margin-top: 5px;">Informations</p> 
+                    </div>
+                    <div>
+                        <p style="font-style: italic;">King : Menelvagor (Kai8027)</p>  
+                    </div>
+                    <div>
+                        <img style="width: 40px; image-rendering: pixelated;" src="https://vignette.wikia.nocookie.net/lotrminecraftmod/images/d/db/Galadhrim_Banner.PNG/revision/latest?cb=20160308112844l">
+                    </div>
+                    <p>...</p>
+            </div>
+          </div>
+        </article>
+            <p>
+                
         </article>
         <p class="between">
             <br>
         </p>
-         <article id="mordor">
-            <h4 class="headlinearticles"> Mordor </h4>
-            <p>
-                "Mordor is a realm surrounded by dark mountains, including orcs, black uruks, ologs and other dark creatures.<br>
+        <article id="mordor">
+          <div>
+            <h4 class="headlinearticles" style="margin: 40px;">Mordor</h4>
+            <div class="inline" style="width: 480px; margin-left: 0;">
+                <p style="font-size: 22px;">"Mordor is a realm surrounded by dark mountains, including orcs, black uruks, ologs and other dark creatures.<br>
                 They are all ruled by the powerful Dark Lord, Sauron, and his servants, the Nazgûls.<br>
                 While the Dark Lord lies in Barad-Dûr, the Witch-King takes the lead of the evil armies.<br>
                 The Witch-King is so, the main leader of Mordor's faction and Minas Morgul became the new capital of Mordor.<br>
                 He fought against Gondor with his allies, Gundamar, and took Pellenor Fields, Lossarnach, Dol Amroth, Lebennin and Ithilien.<br>
                 Later, he gave a city of Lossarnach to Glupe, King of Bangad-Minhiriath, and made an economical alliance.<br>
-                Mordor is the faction with the most of lands and claimbuilds. It is also one of the strongest faction, if it's not the strongest!" - Jukoz, Faction Leader of Mordor<br>
+                Mordor is the faction with the most of lands and claimbuilds. It is also one of the strongest faction, if it's not the strongest!"- Jukoz, Faction Leader of Mordor<br>
             </p>
+            </div>
+            <div class="inline" style="width: 400px; margin: 0; background-color: rgba(255, 255, 255, 0.3);">
+                <p style="font-weight: bold;">Mordor</p>
+                    <div class="infos">
+                        <img src="img/slide3.png" class="cover" style="height: 259px; width: 400px;">
+                        <p style="margin-top: 5px;">Informations</p> 
+                    </div>
+                    <div>
+                        <p style="font-style: italic;">King : Jukoz</p>  
+                    </div>
+                    <div>
+                        <img style="width: 40px; image-rendering: pixelated;" src="https://vignette.wikia.nocookie.net/lotrminecraftmod/images/8/81/Mordor_Banner.PNG/revision/latest/scale-to-width-down/100?cb=20160307165050&format=original">
+                        <img style="width: 40px; image-rendering: pixelated;" src="https://vignette.wikia.nocookie.net/lotrminecraftmod/images/5/58/MinasMorgul_Banner.PNG/revision/latest/scale-to-width-down/100?cb=20160822111209&format=original">
+                        <img style="width: 40px; image-rendering: pixelated;" src="https://vignette.wikia.nocookie.net/lotrminecraftmod/images/0/07/NanUngol_Banner.PNG/revision/latest/scale-to-width-down/100?cb=20160822203042&format=original">
+                    </div>
+                    <p>...</p>
+            </div>
+          </div>
         </article>
         <p class="between">
             <br>
@@ -405,6 +441,13 @@
             <p>
                 Reunited Kingdom
             </p>
+                                <div>
+                        <img style="width: 40px; image-rendering: pixelated;" src="https://vignette.wikia.nocookie.net/lotrminecraftmod/images/f/f1/Gondor_Banner.PNG/revision/latest/scale-to-width-down/70?cb=20160822204212&format=original">
+                        <img style="width: 40px; image-rendering: pixelated;" src="https://vignette.wikia.nocookie.net/lotrminecraftmod/images/7/73/Dol_Amroth_Banner.PNG/revision/latest/scale-to-width-down/70?cb=20160822203917&format=original">
+                        <img style="width: 40px; image-rendering: pixelated;" src="https://vignette.wikia.nocookie.net/lotrminecraftmod/images/d/d5/Lebennin_Banner.PNG/revision/latest/scale-to-width-down/70?cb=20191008143227&format=original">
+                        <img style="width: 40px; image-rendering: pixelated;" src="https://vignette.wikia.nocookie.net/lotrminecraftmod/images/4/4e/Lossarnach_Banner.PNG/revision/latest/scale-to-width-down/70?cb=20160822105042&format=original">
+                        <img style="width: 40px; image-rendering: pixelated;" src="https://vignette.wikia.nocookie.net/lotrminecraftmod/images/d/d7/Ithilien_Banner.PNG/revision/latest/scale-to-width-down/70?cb=20160822110046&format=original">
+                    </div>
         </article>
         <p class="between">
             <br>
@@ -437,15 +480,32 @@
             <br>
         </p>
         <article id="rohan">
-            <h4 class="headlinearticles"> Rohan </h4>
-            <p>
-                "The Rohirrim live in the east of Middle-Earth. They live under constant threat of Isengard but live a pretty peaceful life.<br>
+          <div>
+            <h4 class="headlinearticles" style="margin: 40px;">Rohan</h4>
+            <div class="inline" style="width: 480px; margin-left: 0;">
+                <p style="font-size: 22px;">"The Rohirrim live in the east of Middle-Earth. They live under constant threat of Isengard but live a pretty peaceful life.<br>
                 On Ardas Legends they use their regular faction gear. They have allies everywhere for when war breaks out.<br>
-                They are allied to the Elves of Imladris, LothlÓrien and Dale. With many more to come.<br>
-                So far there are 2 claimbuilds, the village of Ashold and ofcourse a castle to defend their villagers!<br>
+                They are allied to the Elves of Imladris, Lothlórien and Dale. With many more to come.<br>
+                So far there are 2 claimbuilds, the village of Ashold and of course a castle to defend their villagers!<br>
                 As for their leader, his IGN is Wizles, better known as Belagorn. His discord is Wizles#4125. He is a strong believer of getting Rohan back to its former glory.<br>
                 A strong faction the bad-guys don’t want to mess with!" - Wizles, faction Leader of Rohan<br>
             </p>
+            </div>
+            <div class="inline" style="width: 400px; margin: 0; background-color: rgba(255, 255, 255, 0.3);">
+                <p style="font-weight: bold;">Rohan</p>
+                    <div class="infos">
+                        <img src="img/slide1.png" class="cover" style="height: 259px; width: 400px;">
+                        <p style="margin-top: 5px;">Informations</p> 
+                    </div>
+                    <div>
+                        <p style="font-style: italic;">King : Belegorn (Wizles)</p>  
+                    </div>
+                    <div>
+                        <img style="width: 40px; image-rendering: pixelated;" src="https://vignette.wikia.nocookie.net/lotrminecraftmod/images/2/2f/Rohan_Banner.PNG/revision/latest/scale-to-width-down/100?cb=20160308112909&format=original">
+                    </div>
+                    <p>...</p>
+            </div>
+          </div>
         </article>
         <p class="between">
             <br>
