--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="design.css">
-        <link rel="shortcut icon" href="ArdasLegendsLogo.ico" type="image/x-icon"> 
-        <script src="arda-script.js"></script>
+        <link rel="shortcut icon" href="img/ArdasLegendsLogo.ico" type="image/x-icon"> 
     </head>
     <body>
         <header>
@@ -44,10 +43,10 @@ and open the template in the editor.
                             <a href="factions.html" class="Navi">Factions</a>
                         </button>
                         <div class="dropcontent">
-			    <a href="factions.html#avari">Avari</a>
+			                <a href="factions.html#avari">Avari</a>
                             <a href="factions.html#bangad">Bangad Minhiriath</a>
                             <a href="factions.html#beornings">Beornings</a>
-			    <a href="factions.html#bree">Bree</a>
+			                <a href="factions.html#bree">Bree</a>
                             <a href="factions.html#dale">Dale</a>
                             <a href="factions.html#dol_guldur">Dol Guldur</a>
                             <a href="factions.html#dorwinion">Dorwinion</a>
@@ -106,6 +105,7 @@ and open the template in the editor.
             <input type="radio" name="gaga" id="slide1" checked>
             <input type="radio" name="gaga" id="slide2">
             <input type="radio" name="gaga" id="slide3">
+            <input type="radio" name="gaga" id="slide4">
             <div id="slides">
                 <div id="overflow">
                     <div class="inner">
@@ -124,11 +124,17 @@ and open the template in the editor.
                                 <img src="img/slide3.png">
                             </div>
                         </div>
+                        <div class="slide slide_3">
+                            <div class="slide-content">
+                                <img src="img/slide4.png">
+                            </div>
+                        </div>
                     </div>
                     <div id="bullets">
-                    <label for="slide1"></label>
-                    <label for="slide2"></label>
-                    <label for="slide3"></label>
+                    <label for="slide1" class="lab1"></label>
+                    <label for="slide2" class="lab2"></label>
+                    <label for="slide3" class="lab3"></label>
+                    <label for="slide4" class="lab3"></label>
                     </div>
                 </div>
             </div>
