--- a/staff.html
+++ b/staff.html
@@ -10,7 +10,7 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="design.css">
-        <link rel="shortcut icon" href="ArdasLegendsLogo.ico" type="image/x-icon"> 
+        <link rel="shortcut icon" href="img/ArdasLegendsLogo.ico" type="image/x-icon"> 
     </head>
     <body>
         <header>
@@ -43,10 +43,10 @@ and open the template in the editor.
                             <a href="factions.html" class="Navi">Factions</a>
                         </button>
                         <div class="dropcontent">
-			    <a href="factions.html#avari">Avari</a>
+                <a href="factions.html#avari">Avari</a>
                             <a href="factions.html#bangad">Bangad Minhiriath</a>
                             <a href="factions.html#beornings">Beornings</a>
-			    <a href="factions.html#bree">Bree</a>
+                <a href="factions.html#bree">Bree</a>
                             <a href="factions.html#dale">Dale</a>
                             <a href="factions.html#dol_guldur">Dol Guldur</a>
                             <a href="factions.html#dorwinion">Dorwinion</a>
@@ -101,23 +101,26 @@ and open the template in the editor.
         </header>
     <main>
     <div class="block">
-        <div> <!-- Owner and Developper -->
+        <div> <!-- Owner-->
             <div class="inline">
                 <h4>Owner</h4>
                 <img src="https://cravatar.eu/head/nodas1995" title="Nodas">
                 <p class="staff_names" style="margin-top: 0px;">Nodas (nodas1995)</p>
             </div>
+        </div>
+
+        <div> <!--Developpers-->
+            <h4 style="margin-top: 45px;">Developers </h4>
             <div class="inline">
-                <h4 style="margin-top: 0px;">Developer</h4>
                 <img src="https://cravatar.eu/head/Anedhel" title="Anedhel">
                 <p class="staff_names" style="margin-top: 0px;">Anedhel</p>
             </div>
-	    <div class="inline">
-		<h4 style="margin-top: 0px;">Developer</h4>
+            <div class="inline">
                 <img src="https://cravatar.eu/head/Jukoz" title="Jukoz">
                 <p class="staff_names" style="margin-top: 0px;">Jukoz</p>
             </div>
         </div>
+
         <div> <!-- Admins -->
             <h4 style="margin-bottom: 25px;">Admins</h4>
             <div class="inline">
@@ -132,7 +135,7 @@ and open the template in the editor.
                 <img src="https://cravatar.eu/head/20damian07" title="Daim">
                 <p class="staff_names" style="margin-top: 0px;">Daim (20damian07)</p>
             </div>
-	    <div class="inline">
+        <div class="inline">
                 <img src="https://cravatar.eu/head/glupe1" title="Glupe">
                 <p class="staff_names" style="margin-top: 0px;">Glupe (glupe1)</p>
             </div>
