--- a/impressum.html
+++ b/impressum.html
@@ -10,25 +10,32 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="design.css">
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> 
+        <link rel="shortcut icon" href="img/ArdasLegendsLogo.ico" type="image/x-icon"> 
     </head>
     <body>
         <header>
             <br>
-            <h1 style="color:white">Impressum</h1>
+            <h1 style="color:white; font-size: 36px;">Impressum</h1>
             <br>
         </header>
         <main id="impressum">
-        <div class"block">
-        <h4>Ardas Legends</h4>
-            <p>
+        <div class="block">
+        <h4 style="font-size: 46px; margin: 35px;">Ardas Legends</h4>
+            <p> <br>
                 A Lord of the Rings Minecraft Server<br>
                 Minecraft Server IP: 37.187.205.224:25572<br>
-                <a href="https://discord.gg/Q7AjZVf">Discord Server</a><br>
-                <a href="https://ardas-legends.fandom.com/">Fandom Wiki</a><br>
-                <a href="https://github.com/AnedhelAulendur/ArdasLegendsPlugin">Custom Plugin</a><br>
-                <a href="https://lotrminecraftmod.fandom.com/wiki/Updates#Update_36_--_The_Final_1.7.10_Update_.28June_12.2C_2020.29">Lord of the Rings Mod by Mevans</a><br>
             </p>
+                <ul>
+                    <li>
+                        <a class="btn" href="https://discord.gg/Q7AjZVf">Discord Server</a>
+                    </li>
+                    <li>
+                        <a class="btn" href="plugins.html">Custom Plugins</a>
+                    </li>
+                    <li>
+                        <a class="btn" href="https://lotrminecraftmod.fandom.com/wiki/Updates#Update_36_--_The_Final_1.7.10_Update_.28June_12.2C_2020.29">Lord of the Rings Mod by Mevans</a>
+                    </li>
+                </ul>
             <div> <!-- Contributors: Code -->
                 <h4>Contributors to the code:</h4>
                 <div class="inline">
